# silver-sniffle

./: CMakeLists.txt  LICENSE  README.md  SetPath.cmake
server/: CMakeLists.txt  MultipleClients.cpp  MultipleClients.h  multiple_clients.cpp  server.cpp
src/: Client.cpp  Client.h  NcursesDisplay.cpp  NcursesDisplay.h  RSA.cpp  RSA.h  RSAEncrypt.cpp  RSAEncrypt.h  Variables.h  Variables.h.in  main.cpp
src/utils/: FindWord.h  TimeStamp.h  trim.h  utility.h
utils/: UpdateDictionary.h  utility.h
